--- a/css/styles.scss
+++ b/css/styles.scss
@@ -5,6 +5,11 @@
 ///////////// D E F A U L T /////////////
 ////////////////////////////////////////
 
+body {
+	margin: 0;
+	padding: 0;
+}
+
 html {
 	font-size: 10px;
 }
@@ -13,8 +18,14 @@ img {
 	max-width: 100%;
 }
 
+.photoThumbnails p {
+	color: pink;
+	text-transform: uppercase;
+}
+
 a {
 	text-decoration: none;
+	color: blue;
 } &:focus {
 	outline: none;
 }
@@ -27,6 +38,32 @@ a {
 
 ///////////////// M A I N ///////////////
 ////////////////////////////////////////
+
+.photoThumbnails a {
+	img {
+		width: 30%;
+		height: auto;
+	}
+}
+
+.overlay {
+	// position: relative;
+	width: 100%;
+}
+
+.modal {
+	background: white;
+	padding: 40px;
+	width: 80%;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+
+.hidden {
+	display: none;
+}
 
 ////////////// F O O T E R //////////////
 ////////////////////////////////////////
