--- a/css/styles.scss
+++ b/css/styles.scss
@@ -39,16 +39,24 @@ a {
 ///////////////// M A I N ///////////////
 ////////////////////////////////////////
 
+
+
 .photoThumbnails a {
 	img {
 		width: 30%;
+		// flex: 1 0 30%;
 		height: auto;
 	}
 }
 
 .overlay {
-	// position: relative;
+	position: fixed;
 	width: 100%;
+	height: 100vh;
+	top: 0;
+	left: 0;
+	// z-index: 99999;
+	display: none;
 }
 
 .modal {
@@ -59,12 +67,18 @@ a {
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
+	// display: none;
+	z-index: 999;
 }
+
 
 .hidden {
-	display: none;
+	display:none;
 }
 
+.open {
+	display: block;
+}
 ////////////// F O O T E R //////////////
 ////////////////////////////////////////
 
