--- a/css/styles.scss
+++ b/css/styles.scss
@@ -30,6 +30,10 @@ a {
 	outline: none;
 }
 
+.photoThumbnails a{
+	outline:0;
+}
+
 ////////////// H E A D E R //////////////
 ////////////////////////////////////////
 
@@ -49,6 +53,31 @@ a {
 	}
 }
 
+.arrowDiv{
+	position: fixed;
+	width: 30%;
+	z-index: 1500;
+	height: 100%;
+}
+
+.arrowDiv a{
+	height: 100%;
+	width: 100%;
+	display: inline-block;
+	outline: 0;
+}
+
+.arrowRightDiv{
+	top:0;
+	right:0;
+}
+
+
+.arrowLeftDiv{
+	top:0;
+	left:0;
+}
+
 .overlay {
 	position: fixed;
 	width: 100%;
@@ -59,10 +88,21 @@ a {
 	display: none;
 }
 
+.overlayBKG p{
+	color: transparent;
+	margin: 0;
+	padding: 0;
+}
+
+.overlayBKG{
+	width: 100%;
+	height: 100vh;
+}
+
 .modal {
 	background: white;
 	padding: 40px;
-	width: 80%;
+	width: 60%;
 	position: absolute;
 	top: 50%;
 	left: 50%;
