--- a/css/styles.scss
+++ b/css/styles.scss
@@ -2,31 +2,37 @@
 // NORMALIZE
 @import 'normalize';
 
+// FONTS 
+$font : 'Hind', sans-serif;
+
 ///////////// D E F A U L T /////////////
 ////////////////////////////////////////
-
-body {
-	margin: 0;
-	padding: 0;
-	overflow-y: scroll;
-}
-
-.innerCrapper{
-	margin: 0 auto;
-	width: 70%;	
-}
 
 html {
 	font-size: 10px;
 }
 
-img {
-	max-width: 100%;
+body {
+	margin: 0;
+	padding: 0;
+	overflow-y: scroll;
+	font-family: $font;
 }
 
-.photoThumbnails p {
-	color: pink;
-	text-transform: uppercase;
+.wrapper {
+	max-width: 1200px;
+	margin: 0 auto;
+}
+
+.innerCrapper{
+	float: left;
+	width: 80%;	
+	padding: 50px;
+	margin-left: 250px;
+}
+
+img {
+	max-width: 100%;
 }
 
 a {
@@ -36,63 +42,76 @@ a {
 	outline: none;
 }
 
-.photoThumbnails a{
-	outline:0;
-}
-
 ////////////// H E A D E R //////////////
 ////////////////////////////////////////
 
 ///////////////// N A V /////////////////
 ////////////////////////////////////////
 
-///////////////// M A I N ///////////////
-////////////////////////////////////////
+.sidebar {
+	width: 20%;
+	float: left;
+	padding: 50px;
+	position: fixed;
+}
 
-
-
-.photoThumbnails a {
-	img {
-		// width: 30%;
-		// flex: 1 0 30%;
-		height: auto;
+nav.main-nav {
+	h1 {
+		margin: 5px 0;
+		text-transform: uppercase;
+		color: #222;
+	}
+	ul.nav-links {
+		margin: 0;
+		padding: 0;
+		list-style-type: none;
+		li {
+			text-transform: uppercase;
+			letter-spacing: 1px;
+			margin-bottom: 5px;
+			a {
+				color: #222;
+			}
+		}
 	}
 }
 
-.arrowDiv{
+///////////////// M A I N ///////////////
+////////////////////////////////////////
+
+.photoThumbnails a {
+	background: rgba(0,0,0,1) url('../i/plus_white_s.svg') center no-repeat;
+	display: block;
+	outline: none;
+}
+
+.arrowDiv {
 	position: fixed;
 	width: 30%;
 	z-index: 1500;
 	height: 100%;
+	a {
+		height: 100%;
+		width: 100%;
+		display: inline-block;
+		outline: none;
+	}
 }
 
-.arrowDiv a{
-	height: 100%;
-	width: 100%;
-	display: inline-block;
-	outline: 0;
-}
-
-.arrowLeftDiv a{
-	cursor: url("../i/leftArrow.png"), auto;
-	
-}
-
-.arrowRightDiv a{
-	cursor: url("../i/rightArrow.png"), auto;
-	
+.arrowLeftDiv{
+	top: 0;
+	left: 0;
+	a {
+		cursor: url("../i/leftArrow.png"), auto;
+	}
 }
 
 .arrowRightDiv{
-	top:0;
-	right:0;
-}
-
-
-.arrowLeftDiv{
-	top:0;
-	left:0;
-	
+	top: 0;
+	right: 0;
+	a {
+		cursor: url("../i/rightArrow.png"), auto;
+	}
 }
 
 .overlay {
@@ -101,63 +120,91 @@ a {
 	height: 100vh;
 	top: 0;
 	left: 0;
-	// z-index: 99999;
 	display: none;
 }
 
-.overlayBKG p{
+.overlayBKG p {
 	color: transparent;
 	margin: 0;
 	padding: 0;
 }
 
-.overlayBKG{
+.overlayBKG {
 	width: 100%;
 	height: 100vh;
+	background: #000;
+	opacity: 0.5;
 }
 
 .modal {
 	background: white;
-	padding: 40px;
+	padding: 30px;
 	// width: 60%;
-	height: auto;
-	position: absolute;
+	// height: auto;
+	//position: absolute;
+	position: fixed;
+	box-shadow: 0 0 20px rgba(0,0,0,0.1);
+	width: 60%;
 	top: 50%;
+	// left: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
 	// display: none;
 	z-index: 999;
 }
+
 .modalContent {
 	position: relative;
-	img {
-		position: relative;
-		z-index: 1;
-		top: 0;
-	}
-	.newImage {
-		position: absolute;
-		top: 0;
-		width: 100%;
-		z-index: 2;
-		opacity: 0;
-		transition: opacity 0.5s ease;
-	}
-	&.transition {
-		.newImage {
-			opacity: 1;
-		}
-	}
-}
+	// img {
+	// 	position: relative;
+	// 	z-index: 1;
+	// 	top: 0;
+	// }
+}	
+// 	.newImage {
+// 		position: absolute;
+// 		top: 0;
+// 		width: 100%;
+// 		z-index: 2;
+// 		opacity: 0;
+// 		transition: opacity 0.5s ease;
+// 	}
+// 	&.transition {
+// 		.newImage {
+// 			opacity: 1;
+// 		}
+// 	}
+// }
 
 .hidden {
-	display:none;
+	display: none;
 }
 
 .open {
 	display: block;
 }
-////////////// M A S O N R Y //////////////
+
+// .thumbnail-overlay {
+// 	background: rgba(0,0,0,1) url('../i/plus_white_s.svg') center no-repeat;
+// }
+
+// .thumbnail-overlay img {
+// 	transition: all 0.4s ease;
+// }
+
+// .thumbnail-overlay img:hover {
+// 	opacity: 0.5;
+// }
+
+.photoThumbnails a img{
+	transition: all 0.4s ease;
+}
+
+.photoThumbnails a:hover img {
+	opacity: 0.5;
+}
+
+////////////// M A S O N R Y ////////////
 ////////////////////////////////////////
 
 #container {
@@ -169,11 +216,11 @@ a {
   	margin-bottom: 100px;
 }
 
-/* items are not quite 1/3 wide */
+// items are not quite 1/3 wide
 .item {
   // width: 31.2%;
   // 3 column
-  width: 23%;
+  width: 30%;
   // 4 column
   // width: 100%;
   float: left;
@@ -181,13 +228,13 @@ a {
 
 }
 
-/* images cover up the gap */
+// images cover up the gap
 .item img {
   display: block;
   width: 100.5%;
 }
 
-/**** Transitions for Masonry ****/
+// Transitions for Masonry
 
 .masonry,
 .masonry .masonry-brick {
