--- a/css/styles.scss
+++ b/css/styles.scss
@@ -26,9 +26,9 @@ body {
 
 .innerCrapper{
 	float: left;
-	width: 80%;	
+	width: 85%;	
 	padding: 50px;
-	margin-left: 250px;
+	// margin-left: 100px;
 }
 
 img {
@@ -49,11 +49,10 @@ a {
 ////////////////////////////////////////
 
 .sidebar {
-	width: 20%;
+	width: 15%;
 	float: left;
-	padding: 50px 0;
-	position: fixed;
-	margin: 0 0 0 50px;
+	padding: 50px 0 50px 20px;
+	// position: fixed;
 }
 
 nav.main-nav {
@@ -135,23 +134,16 @@ nav.main-nav {
 	width: 100%;
 	height: 100vh;
 	background: #000;
-	opacity: 0.5;
+	opacity: 0.1;
 }
 
 .modal {
 	background: white;
 	padding: 30px;
-	// width: 60%;
-	// height: auto;
 	position: absolute;
-	// position: fixed;
-	box-shadow: 0 0 20px rgba(0,0,0,0.1);
-	// width: 60%;
 	top: 50%;
-	// left: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
-	// display: none;
 	z-index: 999;
 }
 
@@ -167,20 +159,7 @@ nav.main-nav {
 		margin: 0 auto;
 	}
 }	
-// 	.newImage {
-// 		position: absolute;
-// 		top: 0;
-// 		width: 100%;
-// 		z-index: 2;
-// 		opacity: 0;
-// 		transition: opacity 0.5s ease;
-// 	}
-// 	&.transition {
-// 		.newImage {
-// 			opacity: 1;
-// 		}
-// 	}
-// }
+
 
 .hidden {
 	display: none;
@@ -190,20 +169,10 @@ nav.main-nav {
 	display: block;
 }
 
-// .thumbnail-overlay {
-// 	background: rgba(0,0,0,1) url('../i/plus_white_s.svg') center no-repeat;
-// }
-
-// .thumbnail-overlay img {
-// 	transition: all 0.4s ease;
-// }
-
-// .thumbnail-overlay img:hover {
-// 	opacity: 0.5;
-// }
-
 .photoThumbnails a img{
 	transition: all 0.4s ease;
+	position: relative;
+	-webkit-backface-visibility: hidden;
 }
 
 .photoThumbnails a:hover img {
@@ -217,8 +186,6 @@ nav.main-nav {
 	float: left;
   	width: 100%;
   	margin:0 auto;
-  // padding-left: 20px;
-  // padding-right: 1%;
   	margin-bottom: 100px;
 }
 
