--- a/css/_mq.scss
+++ b/css/_mq.scss
@@ -10,19 +10,42 @@
 		max-width: 600px;
 	}
 
-	.innerCrapper {
+	.innerWrapper {
 		padding: 50px 20px;
 		width: 100%;
 	}
 
 	.sidebar{
-		width:100%;
+		width: 100%;
+		padding: 50px 0 0 30px;
+	}
+
+	ul.nav-links li:not(.gallery-links) {
+		display: inline;
 	}
 
     .item {
-  		width: 48%;
+  		// width: 48%;
   		float: left;
   		margin: 1%;
+	}
+
+	ul.nav-links li {
+		position: relative;
+	}
+
+	ul.secondNav {
+		// display:block;
+		position: absolute;
+		top: 20px;
+		z-index: 999;
+		text-indent: 0px;
+		background-color: rgba(255,255,255,0.8);
+		left: 0;
+		a {
+			padding: 5px;
+			display: list-item;
+		}
 	}
 
 } // END 840px
@@ -39,7 +62,7 @@
 	}
 
 	#container{
-		height: auto !important;
+		//height: auto !important;
 	}
 } // END 666px
 
@@ -64,7 +87,7 @@
 	  		width: 100%;
 		}
 
-		.innerCrapper.item{
+		.innerWrapper.item{
 			margin-bottom: 20px;
 		}
 
