--- a/css/_mq.scss
+++ b/css/_mq.scss
@@ -5,7 +5,7 @@
 	}
 } // END 1000px
 
-@media all and (max-width: 840px) {
+@media all and (max-width: 1200px) {
 	.modalContent img {
 		max-width: 600px;
 	}
@@ -22,6 +22,7 @@
 
 	ul.nav-links li:not(.gallery-links) {
 		display: inline;
+		margin-right: 10px;
 	}
 
     .item {
@@ -89,6 +90,12 @@
 
 		.innerWrapper.item{
 			margin-bottom: 20px;
+		}
+
+		.wrap {
+			p {
+				padding: 0 15px;
+			}
 		}
 
 } // END 400px
