--- a/css/styles.scss
+++ b/css/styles.scss
@@ -7,7 +7,7 @@ $font : 'Hind', sans-serif;
 
 // COLOUR
 $links : #222;
-$hover-color : #ccc;
+$hover-color : #8e8e8e;
 
 // TRANSITIONS
 $transition : all 0.2s ease;
@@ -24,6 +24,7 @@ body {
 	padding: 0;
 	overflow-y: scroll;
 	font-family: $font;
+	line-height: 1.5;
 }
 
 .wrapper {
@@ -83,6 +84,7 @@ nav.main-nav {
 			}
 			a {
 				color: $links;
+				font-size: 1.2rem;
 				transition: $transition;
 				&:hover {
 					color: $hover-color;
@@ -92,7 +94,7 @@ nav.main-nav {
 	}
 }
 
-ul.gallery-links, ul.contact-link {
+ul.gallery-links {
 	list-style-type: none;
 	margin: 0;
 	padding: 5px 0;
@@ -108,6 +110,50 @@ ul.gallery-links, ul.contact-link {
 	color: $hover-color;
 }
 
+///////////// O V E R L A Y /////////////
+////////////////////////////////////////
+
+.overlay {
+	display: none;
+	position: fixed;
+	top: 0;
+	left: 0;
+	height: 100%;
+	width: 100%;
+	background: rgba(255,255,255,0.95);
+	z-index: 100000;
+}
+.wrap {
+	color: #000;
+	text-align: center;
+	max-width: 100%;
+	margin: 225px auto;
+	text-transform: uppercase;
+	h2 {
+		font-size: 1.8rem;
+		margin-bottom: 0;
+	}
+	p {
+		font-size: 1.3rem;
+		margin-top: 8px;
+	}
+	ul.contact-links {
+		margin: 0;
+		padding: 0;
+		list-style-type: none;
+		li a {
+			color: $links;
+			transition: $transition;
+			&:nth-child(2n) {
+				margin: 0 20px;
+			}
+			&:hover {
+				color: $hover-color;
+			}
+		}	
+	}
+}
+
 ///////////////// M A I N ///////////////
 ////////////////////////////////////////
 
@@ -115,89 +161,6 @@ ul.gallery-links, ul.contact-link {
 	background: rgba(0,0,0,1) url('../i/plus_white_s.svg') center no-repeat;
 	display: block;
 	outline: none;
-}
-
-.arrowDiv {
-	position: fixed;
-	width: 30%;
-	z-index: 1500;
-	height: 100%;
-	a {
-		height: 100%;
-		width: 100%;
-		display: inline-block;
-		outline: none;
-	}
-}
-
-.arrowLeftDiv{
-	top: 0;
-	left: 0;
-	a {
-		cursor: url("../i/leftArrow.png"), auto;
-	}
-}
-
-.arrowRightDiv{
-	top: 0;
-	right: 0;
-	a {
-		cursor: url("../i/rightArrow.png"), auto;
-	}
-}
-
-.overlay {
-	position: fixed;
-	width: 100%;
-	height: 100vh;
-	top: 0;
-	left: 0;
-	display: none;
-}
-
-.overlayBKG p {
-	color: transparent;
-	margin: 0;
-	padding: 0;
-}
-
-.overlayBKG {
-	width: 100%;
-	height: 100vh;
-	background: #000;
-	opacity: 0.1;
-}
-
-.modal {
-	background: white;
-	padding: 30px;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	z-index: 999;
-}
-
-.modalContent {
-	position: relative;
-	img {
-		position: relative;
-		z-index: 1;
-		top: 0;
-		max-width: 700px;
-		max-height: 550px;
-		display: block;
-		margin: 0 auto;
-	}
-}	
-
-
-.hidden {
-	display: none;
-}
-
-.open {
-	display: block;
 }
 
 .photoThumbnails a img{
@@ -208,6 +171,35 @@ ul.gallery-links, ul.contact-link {
 
 .photoThumbnails a:hover img {
 	opacity: 0.5;
+}
+
+// fancybox overrides
+
+.fancybox-skin {
+	border-radius: 0;
+	box-shadow: 0 0 0 transparent;
+}
+
+.fancybox-overlay.fancybox-overlay-fixed {
+  background-color: rgba(0,0,0, 0.01);
+}
+
+img.fancybox-image {
+	cursor: auto;
+}
+
+a.fancybox-nav.fancybox-next {
+	cursor: url(../i/rightArrow.png), auto;
+	span {
+		display: none;
+	}
+}
+
+a.fancybox-nav.fancybox-prev {
+	cursor: url(../i/leftArrow.png), auto;
+	span {
+		display: none;
+	}
 }
 
 ////////////// M A S O N R Y //////////////
@@ -276,7 +268,7 @@ footer.footer{
 	text-align: center;
 	text-transform: uppercase;
 	letter-spacing: 1px;
-	color: #ccc;
+	color: $hover-color;
 	a {
 		color: $hover-color;
 		transition: $transition;
@@ -291,7 +283,6 @@ ul.social-icons {
 	list-style-type: none;
 	margin: 0;
 	padding: 0;
-	// text-align: center;
 	li {
 		display: inline;
 		&:nth-child(2) {
