--- a/css/styles.scss
+++ b/css/styles.scss
@@ -27,14 +27,13 @@ body {
 }
 
 .wrapper {
-	max-width: 1200px;
+	width: 95%;
+	max-width: 1400px;
 	margin: 0 auto;
 }
 
 .innerWrapper{
-	// float: left;
-	width: 100%;	
-	// padding: 50px 20px;
+	width: 100%;
 }
 
 img {
@@ -47,9 +46,6 @@ a {
 		outline: none;
 	}
 }
-
-////////////// H E A D E R //////////////
-////////////////////////////////////////
 
 ///////////////// N A V /////////////////
 ////////////////////////////////////////
@@ -97,11 +93,6 @@ nav.main-nav {
 			}
 		}
 	}
-}
-
-.wait {
-	position: absolute;
-	z-index: 1000000;
 }
 
 svg.logo {
@@ -178,7 +169,9 @@ ul.gallery-links {
 		}	
 	}
 	.button-container {
-		margin-top: 60px;
+		position: absolute;
+		right: 35px;
+		top: 45px;
 		.close-button {
 			font-weight: 600;
 			font-size: 1.2rem;
@@ -186,9 +179,6 @@ ul.gallery-links {
 			border: 1px solid $hover;
 			color: $hover;
 			transition: $transition;
-			position: absolute;
-			right: 35px;
-			top: 45px;
 			&:hover {
 				color: $links;
 				border: 1px solid $links;
@@ -249,6 +239,51 @@ a.fancybox-nav.fancybox-prev {
 		display: none;
 	}
 }
+
+.cd-top {
+	display: inline-block;
+	height: 30px;
+	width: 30px;
+
+	position: fixed;
+	bottom: 10px;
+	right: 10px;
+
+	/* image replacement properties */
+	overflow: hidden; 
+	text-indent: 100%;
+	white-space: nowrap;
+
+	background: rgba($hover, .6) url(../i/cd-top-arrow.svg) no-repeat center 50%;
+
+	visibility: hidden;
+	opacity: 0;
+
+	-webkit-transition: opacity .3s 0s, visibility 0s .3s;
+	-moz-transition: opacity .3s 0s, visibility 0s .3s;
+	transition: opacity .3s 0s, visibility 0s .3s;
+
+	&.cd-is-visible, &.cd-fade-out, .no-touch &:hover {
+		-webkit-transition: opacity .3s 0s, visibility 0s 0s;
+		-moz-transition: opacity .3s 0s, visibility 0s 0s;
+		transition: opacity .3s 0s, visibility 0s 0s;
+	}
+
+	&.cd-is-visible { /* the button becomes visible */
+		visibility: visible;
+		opacity: 1;
+	}
+
+	&.cd-fade-out { /* if the user keeps scrolling down, the button is out of focus and becomes less visible */
+		opacity: .5;
+	}
+
+	.no-touch &:hover {
+		background-color: rgba($hover, 1);
+		opacity: 1;
+	}
+}
+
 
 ////////////// M A S O N R Y //////////////
 //////////////////////////////////////////
@@ -311,7 +346,7 @@ a.fancybox-nav.fancybox-prev {
 }
 
 
-////////////// F O O T E R  //////////////
+////////////// F O O T E R ///////////////
 /////////////////////////////////////////
 
 footer.footer{
@@ -322,6 +357,7 @@ footer.footer{
 	text-transform: uppercase;
 	letter-spacing: 1px;
 	color: $hover;
+	opacity: 0;
 	a {
 		color: $hover;
 		transition: $transition;
